--- a/first_python_tutorial.ipynb
+++ b/first_python_tutorial.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxdfVMHyBeqgVEd1h5U+Kl",
+      "authorship_tag": "ABX9TyM7l8YcIGJb6BezqTUq2xJS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,24 +25,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Hussam3d/Hussam3d/blob/main/first_python_tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "IBP0iIA3YRq6"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "IEvHNl_DcmEK"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -110,9 +92,82 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print\"hi\""
+      ],
+      "metadata": {
+        "id": "951lYm_6K36s",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "42ffc4a0-3d6b-4d1a-ef33-686090b7f0ca"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "Missing parentheses in call to 'print'. Did you mean print(...)? (<ipython-input-1-fef506d7a056>, line 1)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-fef506d7a056>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print\"hi\"\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(...)?\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print'hi'\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "id": "Fu01W8gy6CLr",
+        "outputId": "27b4e74c-0078-4846-f847-ae12eac7b3a4"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "Missing parentheses in call to 'print'. Did you mean print(...)? (<ipython-input-2-b2c60e0389d8>, line 1)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-b2c60e0389d8>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print'hi'\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(...)?\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (\"hi\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EQXuwN1H6HuA",
+        "outputId": "e1cc2917-e6b5-4a0c-f5ef-2fc312f8fe51"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hi\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "951lYm_6K36s"
+        "id": "BW3bGLYQ6N4w"
       },
       "execution_count": null,
       "outputs": []
